<resources>
    <string name="app_name">证牛</string>
    <string name="no_net">请连接网络后重试</string>
    <string name="error_http">请求失败</string>
    <string name="error_conversion">请求异常</string>
    <string name="error_unexpected">内部错误</string>
    <string name="no_net_refresh">网络不佳，请稍后重试</string>
    <string name="no_login">未登录</string>
    <string name="setting">设置</string>
    <string name="name">用户名</string>
    <string name="password">密码</string>
    <string name="remenber_password">记住密码</string>
    <string name="find_password">找回密码</string>
    <string name="register">没有账号，立即注册</string>
    <string name="register_login1">已有账号，</string>
    <string name="register_login2">立即登录</string>
    <string name="login">马上登录</string>
    <string name="please_login">请先登录</string>
    <string name="modify">修改</string>
    <string name="save">保存</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_fail">修改失败，请稍后重试</string>
    <string name="call">拨打电话</string>
    <string name="tips">温馨提示</string>
    <string name="send">发送</string>
    <string name="home">首页</string>
    <string name="teacher">老师</string>
    <string name="news">资讯</string>
    <string name="activity">活动</string>
    <string name="market">行情</string>
    <string name="person">我的</string>
    <string name="forum">论坛</string>
    <string name="load_more">加载更多&#8230;</string>
    <string name="loadind">正在加载&#8230;</string>
    <string name="not_net_refresh">没有消息，下拉刷新重试</string>
    <string name="school">股市学院</string>
    <string name="course">特约讲堂</string>
    <string name="popular_expert">人气牛人</string>
    <string name="earn_most_expert">最赚钱牛人</string>
    <string name="short_term_expert">短线牛人</string>
    <string name="hot_live_room">人气直播室</string>
    <string name="phone_num">手机号</string>
    <string name="msg_code">短信验证码</string>
    <string name="identify_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="msg_success">短信发送成功，请稍后</string>
    <string name="msg_fail">发送验证码异常</string>
    <string name="msg_regist_fail">发送注册验证码异常</string>
    <string name="new_pw">6&#8211;16位新密码，只包含数字和字母</string>
    <string name="confirm_new_pw">确认新密码</string>
    <string name="pw_len_limit">密码长度应为6&#8211;16，且必须是英文字母和数字</string>
    <string name="confirm">确  定</string>
    <string name="cancel">取  消</string>
    <string name="pw_tip">密码由6&#8211;16个字符组成，区分大小写（不能由纯数字填写，特殊字符除外）</string>
    <string name="register_pwd">请设置6&#8211;16位密码，只包含数字和字母</string>
    <string name="register_rpwd">再次确认密码</string>
    <string name="register_agreement">注册协议</string>
    <string name="login_user_empty">手机号不能为空</string>
    <string name="phone_number_verify">手机号格式不正确</string>
    <string name="phone_number_empty">手机号不能为空</string>
    <string name="login_pw_empty">密码不能为空</string>
    <string name="msg_not_empty">发送悄悄话不能为空</string>
    <string name="keywords_empty">关键字不为空</string>
    <string name="server_error">请求失败，请稍后重试&#8230;</string>
    <string name="phone_empty">手机号不能为空</string>
    <string name="msgcode_empty">验证码不能为空</string>
    <string name="new_pw_empty">请填写密码</string>
    <string name="confirm_pw_empty">请确认密码</string>
    <string name="pw_no_equals">两次密码不相同，请重新输入</string>
    <string name="correct_phone">请输入正确的手机号</string>
    <string name="findpw_error">找回密码异常</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="register_agreement_checked">是否同意注册？</string>
    <string name="pw_no_empty">密码不能为空</string>
    <string name="enter">进入</string>
    <string name="press_again_exit">再按一次退出程序</string>
    <string name="person_info">个人资料</string>
    <string name="person_avatar">头像</string>
    <string name="person_nick">昵称</string>
    <string name="person_sex">性别</string>
    <string name="person_birth">生日</string>
    <string name="person_location">所在地</string>
    <string name="person_pw">登录密码</string>
    <string name="person_signature">个性签名</string>
    <string name="modify_nick">修改昵称</string>
    <string name="modify_nick_warning">昵称由英文字母、汉字或阿拉伯数字组成，不得使用特殊字符，建议长度2&#8211;6个字符以内。</string>
    <string name="nick_min_len">昵称应在2&#8211;6个字符以内</string>
    <string name="modify_pw">修改密码</string>
    <string name="modify_pw_now">当前密码</string>
    <string name="modify_intru_self">自我介绍</string>
    <string name="modify_words_left">还能输入%1$d个字</string>
    <string name="camera">拍照</string>
    <string name="photo_album">从相册选择</string>
    <string name="whole_nation">全国地区</string>
    <string name="location_selected">已选地区</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="about_us">关于我们</string>
    <string name="about_feedback">意见反馈</string>
    <string name="about_update">检查更新</string>
    <string name="about_clear">清理缓存</string>
    <string name="about_refresh_rate">行情刷新频率</string>
    <string name="about_push">推送设置</string>
    <string name="about_favourable_comment">支持证牛，给个好评！</string>
    <string name="about_us_txt">证牛是上海证犇网络科技有限公司旗下的互联网理财品牌，企业自成立以来，一直致力于稳健理财，安全理财的服务理念。通过知名人士的专业分享和讲解指导，为广大社会公众提供一个简洁、高效、绿色的网络理财平台，力求把观念进行最广泛的普及。</string>
    <string name="about_us_phone">联系电话：400&#8211;821&#8211;5232</string>
    <string name="about_us_official">微信公众号：证牛</string>
    <string name="about_us_call">是否确认拨打 ：%1$s ?</string>
    <string name="about_us_clean">是否确认清理缓存</string>
    <string name="scan_wx_qr_code">扫一扫，关注官方微信\n更多精彩，不容错过</string>
    <string name="room_num">特约讲堂\n房间号：9898</string>
    <string name="contribution">贡献榜</string>
    <string name="recommend">推荐</string>
    <string name="vip">VIP</string>
    <string name="recharge">充值</string>
    <string name="give">赠送</string>
    <string name="wealth_total">总计：%1$s证牛币</string>
    <string name="choose_num">选择数量：</string>
    <string name="had_fan">关注成功！</string>
    <string name="give_confirm">是否确认送礼物</string>
    <string name="rules">内容规则</string>
    <string name="had_read_rules">我确定已经阅读此免责条款</string>
    <string name="private_talk_tips">开通会员，就可以看到你想看到的答案啦！\n也许这一个盘，你就能赚翻，机不可失哦！</string>
    <string name="room_number">房间号:</string>
    <string name="room_operation">操作风格:</string>
    <string name="room_click">人气：</string>
    <string name="exit_login">退出当前账号</string>
    <string name="loading">正在加载，请稍后 。。。</string>
    <string name="send_success">赠送成功</string>
    <string name="my_private_msg">我的悄悄话</string>
    <string name="member_private_msg">会员悄悄话</string>
    <string name="wealth_left">余额：%1$s  证牛币</string>
    <string name="fen_left">积分：%1$s  积分</string>
    <string name="join_now">立即加入</string>
    <string name="member_area">牛人专区</string>
    <string name="video">视频</string>
    <string name="courses">课程表</string>
    <string name="notice">公告</string>
    <string name="use_phone_flow">当前未连接WiFi，确认使用手机流量看直播吗?</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_focus">我的关注</string>
    <string name="nodatatips">数据已加载完</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开刷新</string>
    <string name="header_hint_refresh_loading">正在加载&#8230;</string>
    <string name="header_hint_refresh_time">更新于：</string>
    <string name="footer_hint_load_normal">查看更多</string>
    <string name="footer_hint_load_ready">松开载入更多</string>
    <string name="article">名家博文</string>
    <string name="collect">收藏</string>
    <string name="praise">点赞</string>
    <string name="choose_recharge">请选择证牛币数量</string>
    <string name="input_recharge">输入任意金额财富数</string>
    <string name="wealthy_currency">证牛币</string>
    <string name="wealthy_currency_count">个证牛币</string>
    <string name="recharge_now">立即充值</string>
    <string name="recharge_tips">温馨提示\n证牛币是证牛针对个人用户在互联网的消费行业而推出的具有唯一性质的虚拟货币\n在充值、消费过程中，1证牛币=1元人民币</string>
    <string name="pay_now">立即支付</string>
    <string name="pay">支付</string>
    <string name="bill">账单</string>
    <string name="pay_yb">易宝支付</string>
    <string name="pay_yb_info">本服务由易宝支付（yeepay.com)提供</string>
    <string name="pay_yb_comp">付款给上海证犇网络科技有限公司</string>
    <string name="pay_yb_money">￥%1$d</string>
    <string name="product">商品</string>
    <string name="order">订单</string>
    <string name="card_num">卡号</string>
    <string name="input_card_num">请输入储蓄卡卡号</string>
    <string name="pay_bank">银行支付</string>
    <string name="bank_name">开户行：中国工商银行——上海浦东陆家嘴支行</string>
    <string name="bank_card_num">账号：1001 1826 0900 0309 615</string>
    <string name="bank_use_name">户名：上海证犇网络科技有限公司</string>
    <string name="bank_warning">温馨提示：1证牛币=1元人民币</string>
    <string name="bank_imp_tips">重要提示</string>
    <string name="bank_tips">1.请在汇款备注中填写[充值代收款]\n2.银行汇款完成后，请将“汇款银行、汇款人、汇款金额、汇款时间、证牛登录手机号或已有直播室房间号”发送给客服\n3.如有疑问，请联系客服</string>
    <string name="pay_zfb">支付宝支付</string>
    <string name="pay_zfb_account">收款支付宝账号：zhengniu@98cfw.com</string>
    <string name="pay_zfb_name">收款人：上海证犇网络科技有限公司</string>
    <string name="pay_zfb_mobile">联系电话：17075154313</string>
    <string name="pay_zfb_tel">联系客服：400&#8211;821&#8211;5232</string>
    <string name="pay_zfb_tips">提示：支付宝充值目前暂时不支持自动到账，充值后如需马上到账或长时间未到账，请联系客服！\n(注：非交易日充值只能延至下一交易日到账)</string>
    <string name="my_tactics">我的策略</string>
    <string name="new_tactics">最新策略</string>
    <string name="my_game">我的大赛</string>
    <string name="my_qa">我的问答</string>
    <string name="my_orders">我的订单</string>
    <string name="search_hint">请输入关键字或讲师名称</string>
    <string name="no_data_about_keyword">没有与该关键字有关的数据</string>
    <string name="not_more_data">没有更多数据</string>
    <string name="vip_tips">您还不是VIP，不能发送悄悄话</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_now">立即购买</string>
    <string name="tactics_tips">备注：您尚未购买此策略，购买后可以观看全部内容</string>
    <string name="tactics">策略</string>
    <string name="introduction">简介</string>
    <string name="teacher_show_gift">晒礼物</string>
    <string name="teacher_fans">粉丝：%1$s</string>
    <string name="teacher_room_num">房间号</string>
    <string name="teacher_style">操作风格</string>
    <string name="teacher_sign">个性签名</string>
    <string name="teacher_intro">个人简介</string>
    <string name="not_collect">未关注</string>
    <string name="is_collect">已经关注</string>
    <string name="buy">购买</string>
    <string name="video_play_num">%1$s次播放</string>
    <string name="input_name_num">请输入老师名称或房间号</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="search">搜索</string>
    <string name="confirm_buy">确认购买嘛？</string>
    <string name="tips_1">非常抱歉</string>
    <string name="tips_2">您还不是VIP会员,</string>
    <string name="tips_3">暂时不能获得导师一对一的专项增值服务</string>
    <string name="had_collected">您已经关注过了</string>
    <string name="update_recent">当前为最新版本</string>
    <string name="name_code">名称代码</string>
    <string name="warning">提醒</string>
    <string name="drag">拖动</string>
    <string name="delete">删除</string>
    <string name="ah_stock">AH股</string>
    <string name="stock_name">股票名称</string>
    <string name="a_stock">A股</string>
    <string name="h_stock">H股(延)</string>
    <string name="premium">溢价(H/A)</string>
    <string name="shareholder">股东</string>
    <string name="stock_holding_quantity">持股数量</string>
    <string name="proportion">占比</string>
    <string name="buy_in">买入</string>
    <string name="mark_buy_in_confirm">市价委托%1$s确认</string>
    <string name="confirm_entrust">您是否确认以上委托</string>
    <string name="buy_sell_code">2.代码：%1$s</string>
    <string name="buy_sell_name">3.名称：%1$s</string>
    <string name="buy_sell_price">4.价格：%1$s</string>
    <string name="buy_sell_num">5.数量：%1$s</string>
</resources>