<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_hot_industry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/register_content_color"
        android:paddingLeft="@dimen/base10dp"
        android:paddingRight="@dimen/base10dp"
        android:paddingTop="@dimen/base10dp"
        android:paddingBottom="@dimen/base10dp"
        android:drawableRight="@drawable/right_arrows"
        android:text="@string/ah_stock"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_edf2f6"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/base10dp"
        android:paddingRight="@dimen/base10dp"
        android:paddingTop="@dimen/base5dp"
        android:paddingBottom="@dimen/base5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            style="@style/Txt14Grey"
            android:text="@string/stock_name"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/Txt14Grey"
            android:text="@string/a_stock"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/Txt14Grey"
            android:text="@string/h_stock"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/Txt14Grey"
            android:text="@string/premium"/>

    </LinearLayout>

    <cn.zn.com.zn_android.uiclass.ScrollListView
        android:id="@+id/lv_ah_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>