<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        style="@style/Txt14Grey"
        android:background="@drawable/border_left_right_line"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/base8dp"
        android:paddingBottom="@dimen/base8dp"
        android:text="@string/shareholder"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/Txt14Grey"
        android:layout_height="match_parent"
        android:background="@drawable/border_right_line"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/base8dp"
        android:paddingBottom="@dimen/base8dp"
        android:text="@string/stock_holding_quantity"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/Txt14Grey"
        android:layout_height="match_parent"
        android:background="@drawable/border_right_line"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="@dimen/base8dp"
        android:paddingBottom="@dimen/base8dp"
        android:text="@string/proportion"/>
</LinearLayout>